budgie-desktop (10.5.1-3) UNRELEASED; urgency=medium

  * Bug-fix release
    Add support to hide/show network manager applet icon via gsettings
    show-tray-icon.patch
  * Add support for the Debian third-part applet budgie-appmenu-applet
    recalc-panel-box-visibility.patch
  * Update keygrab.patch so that mutter-5 dbus UngrabAccelerators is
    supported - this stops the spamming of journald

 -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 01 Jan 2020 20:32:35 +0000

budgie-desktop (10.5.1-2) unstable; urgency=medium

  * Bug-fix release
    Handle monitor-monitor window positioning
      strut-calc.patch
    Ensure budgie popovers handle desktop scaling beyond 100%
      popup-scale-factor.patch
    Manage keyboard shortcuts - resolve intermittent loss of shortcuts
    on login
      keygrab.patch
  * Packaging Changes
    control: fix home-page link to point to a valid url
    control: add build-depends on debhelper-compat (= 12)
    compat: remove deprecated file
    upstream/metadata: refresh with new upstream information
    copyright: refresh with upstream contact info
    watch: update with revised github project name
    changelog: fixed typo StandardsVersion --> Standards-Version
    Update libbudgie-private0.symbols with new symbol due to
    strut-calc.patch

 -- David Mohammed <fossfreedom@ubuntu.com>  Sat, 30 Nov 2019 10:59:21 +0000

budgie-desktop (10.5.1-1) unstable; urgency=medium

  * Official upstream release
    - upstream release announcement in install changelogs
  * Drop all patches except for the following (rebased where necessary)
    1000-Obtain-gsettings-transparency-key-value-before-showi.patch
    desktop-override.patch
    desktop-settings.patch
    pkexec-menu.patch
    wnck-shutdown.patch
    use-builtin-session-manager.patch
  * Packaging Changes
    Control - bump Standards-Version - no changes required
    Update libraven symbols

 -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 16 Oct 2019 15:07:53 +0100
