@@ -1,19 +1,18 @@
 Author: David Mohammed <fossfreedom@ubuntu.com>
-Last-Update: 2019-11-23
-Description: [PATCH] Rework panel struts based on Plank
- Resolves upstream #869
+Last-Update: 2019-12-18
+Description: [PATCH] WIP: Handle multimonitor panel positioning (#1908)
  The strut calculations budgie uses need to account for primary monitor
  positioning in relation to other monitors. In addition, scaling needs
  to handle 100%/200% scale factors.
-Forwarded: https://github.com/solus-project/budgie-desktop/pull/1908
+Origin: Commit 4d9498ee8b309119d06f5b0f12376dd9e391d0b3
 
 ---
- src/lib/toplevel.vala | 68 +++++++++++++++++++++++++++++++++++--------
+ src/lib/toplevel.vala | 48 ++++++++++++++++++++++++++-----------------
  src/panel/panel.vala  |  2 +-
- 2 files changed, 57 insertions(+), 13 deletions(-)
+ 2 files changed, 30 insertions(+), 20 deletions(-)
 
 diff --git a/src/lib/toplevel.vala b/src/lib/toplevel.vala
-index 80eadf0b..bcaa7b60 100644
+index 80eadf0b..77b7ff10 100644
 --- a/src/lib/toplevel.vala
 +++ b/src/lib/toplevel.vala
 @@ -12,6 +12,22 @@
@@ -39,30 +38,23 @@ index 80eadf0b..bcaa7b60 100644
  public abstract class Toplevel : Gtk.Window
  {
  
-@@ -63,6 +79,7 @@ public static void set_struts(Gtk.Window? window, PanelPosition position, long p
+@@ -63,13 +79,7 @@ public static void set_struts(Gtk.Window? window, PanelPosition position, long p
      var screen = window.screen;
      Gdk.Monitor mon = screen.get_display().get_primary_monitor();
      Gdk.Rectangle primary_monitor_rect = mon.get_geometry();
+-    /*
+-    strut-left strut-right strut-top strut-bottom
+-    strut-left-start-y   strut-left-end-y
+-    strut-right-start-y  strut-right-end-y
+-    strut-top-start-x    strut-top-end-x
+-    strut-bottom-start-x strut-bottom-end-x
+-    */
 +    int scale = window.get_scale_factor();
-     /*
-     strut-left strut-right strut-top strut-bottom
-     strut-left-start-y   strut-left-end-y
-@@ -75,30 +92,57 @@ public static void set_struts(Gtk.Window? window, PanelPosition position, long p
-         return;
-     }
  
-+    message("rect_x %d", primary_monitor_rect.x);
-+    message("rect_y %d", primary_monitor_rect.y);
-+    message("width %d", primary_monitor_rect.width);
-+    message("height %d", primary_monitor_rect.height);
-+    message("size %d", (int)panel_size);
-+
-+    //left, right, top, bottom, left_start_y, left_end_y, right_start_y, right_end_y, top_start_x, top_end_x, ottom_start_x, bootom_end_x
-+    //0     1       2    3       4             5           6              7            8            9         10             11              s
-+
+     if (!window.get_realized()) {
+         return;
+@@ -78,27 +88,27 @@ public static void set_struts(Gtk.Window? window, PanelPosition position, long p
      // Struts dependent on position
-+
-+
      switch (position) {
          case PanelPosition.TOP:
 -            struts[2] = panel_size;
@@ -71,10 +63,6 @@ index 80eadf0b..bcaa7b60 100644
 +            struts[Struts.TOP] = (panel_size + primary_monitor_rect.y) * scale;
 +            struts[Struts.TOP_START] = primary_monitor_rect.x * scale;
 +            struts[Struts.TOP_END] = (primary_monitor_rect.x + primary_monitor_rect.width) * scale - 1;
-+
-+            //  struts [Struts.TOP] = (monitor_geo.y + VisibleDockHeight) * window_scale_factor;
-+			//	struts [Struts.TOP_START] = monitor_geo.x * window_scale_factor;
-+			//	struts [Struts.TOP_END] = (monitor_geo.x + monitor_geo.width) * window_scale_factor - 1;
              break;
          case PanelPosition.LEFT:
              panel_size += 5;
@@ -84,10 +72,6 @@ index 80eadf0b..bcaa7b60 100644
 +            struts[Struts.LEFT] = (primary_monitor_rect.x + panel_size) * scale;
 +            struts[Struts.LEFT_START] = primary_monitor_rect.y * scale;
 +            struts[Struts.LEFT_END] = (primary_monitor_rect.y + primary_monitor_rect.height) * scale - 1;
-+
-+            //struts [Struts.LEFT] = (monitor_geo.x + VisibleDockWidth) * window_scale_factor;
-+            //struts [Struts.LEFT_START] = monitor_geo.y * window_scale_factor;
-+            //struts [Struts.LEFT_END] = (monitor_geo.y + monitor_geo.height) * window_scale_factor - 1;
              break;
          case PanelPosition.RIGHT:
              panel_size += 5;
@@ -97,10 +81,6 @@ index 80eadf0b..bcaa7b60 100644
 +            struts[Struts.RIGHT] = (screen.get_width() + panel_size) - (primary_monitor_rect.x + primary_monitor_rect.width) * scale;
 +            struts[Struts.RIGHT_START] = primary_monitor_rect.y * scale;
 +            struts[Struts.RIGHT_END] = (primary_monitor_rect.y + primary_monitor_rect.height) * scale - 1;
-+            //struts [Struts.RIGHT] = (VisibleDockWidth + controller.window.get_screen ().get_width () - monitor_geo.x - monitor_geo.width) * window_scale_factor;
-+            //struts [Struts.RIGHT_START] = monitor_geo.y * window_scale_factor;
-+            //struts [Struts.RIGHT_END] = (monitor_geo.y + monitor_geo.height) * window_scale_factor - 1;
-+
              break;
          case PanelPosition.BOTTOM:
          default:
@@ -110,10 +90,6 @@ index 80eadf0b..bcaa7b60 100644
 +            struts[Struts.BOTTOM] = (panel_size + screen.get_height() - primary_monitor_rect.y - primary_monitor_rect.height) * scale;
 +            struts[Struts.BOTTOM_START] = primary_monitor_rect.x * scale;
 +            struts[Struts.BOTTOM_END] = (primary_monitor_rect.x + primary_monitor_rect.width) * scale - 1;
-+
-+            //struts [Struts.BOTTOM] = (VisibleDockHeight + controller.window.get_screen ().get_height () - monitor_geo.y - monitor_geo.height) * window_scale_factor;
-+            //struts [Struts.BOTTOM_START] = monitor_geo.x * window_scale_factor;
-+            //struts [Struts.BOTTOM_END] = (monitor_geo.x + monitor_geo.width) * window_scale_factor - 1;
              break;
      }
  
@@ -132,4 +108,3 @@ index ca892faf..ce64fe93 100644
  
 -- 
 2.17.1
-
