@@ -7,6 +7,8 @@ budgie-desktop (10.5.1-3) UNRELEASED; urgency=medium
     recalc-panel-box-visibility.patch
   * Update keygrab.patch so that mutter-5 dbus UngrabAccelerators is
     supported - this stops the spamming of journald
+  * Update strut-calc.patch with the upstream accepted commit.  This
+    resolves messages spamming journald
 
  -- David Mohammed <fossfreedom@ubuntu.com>  Wed, 01 Jan 2020 20:32:35 +0000
 
